Added: API Customer - node version 19
